25TH-AUG-4:24PM

--- a/Rifah/Rifah4/Rotten-Mangoes-rifah4/Rotten-Mangoes-rifah2/movie-website-master/templates/views/movielist.ejs
+++ b/Rifah/Rifah4/Rotten-Mangoes-rifah4/Rotten-Mangoes-rifah2/movie-website-master/templates/views/movielist.ejs
@@ -22,9 +22,10 @@
     <% }
     else { %>
         <% for (var i = 0; i < moviesList.length; i++){ %>
-            <ul style="color: white; font-size: xx-large; font-style: italic; font-family: cursive">
-                <%= moviesList[i].Id + ". " + moviesList[i].Title %>
-            </ul>
+        <a href=<%="/movielist/"+moviesList[i].Id+"/details"%>>
+            <p><%=moviesList[i].Title%></p>
+
+        </a>
         <% } %>
 
     <% } %>
