--- a/Rotten-Mangoes-rifah2/movie-website-master/public/css/login.css
+++ b/Rotten-Mangoes-rifah2/movie-website-master/public/css/login.css
@@ -4,29 +4,29 @@
 }
 body{
     /* background-image: url("H:\0. Level 2 Term 2\Project\Front End\HTML\AvengersEndgamepostcredits.jpg") no-repeat center fixed;*/
-    background-image: url("https://www.myfreewalls.com/public/uploads/preview/captain-america-shield-4k-wallpaper-116241401857fqn8nphyk.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
-
+    background-color: black;
 }
 
 .container{
-    background: #000000;
+    background: #222222;
     width: 350px;
     height: 200px;
-    padding-bottom: 20px;
     position: absolute;
     top:50%;
     left: 50%;
     transform: translate(-50%, -50%);
     margin: auto;
-    padding: 70px 50px 20px 50px;
+    /*padding: 70px 50px 20px 50px;*/
     text-align: center;
+    border-radius: 20px;
 }
 
 .head{
     position: relative;
+    color: #EFFC20;
 }
 
 
@@ -39,16 +39,28 @@ body{
 .fontLabel{
     color: #EFFC20;
     position: relative;
-    font-size: medium;
+    font-size: 14px;
 }
 
 .fr{
     float: right;
-    color: gray;
 }
 
 .clr{
     clear: both;
+}
+
+.radio{
+    color: white;
+    background: #000000;
+    line-height: 38px;
+}
+
+.terms{
+    line-height: 35px;
+    text-align: center;
+    background: #000000;
+    color: white;
 }
 
 .box{
@@ -59,6 +71,9 @@ body{
     font-size: 12px;
     color: #EFFC20 ;
 }
+/*.fl_iconbox{
+    background-color: #EFFC20;
+}*/
 
 .textBox{
     height: 35px;
