--- a/Rotten-Mangoes-rifah2/movie-website-master/templates/partials/header.ejs
+++ b/Rotten-Mangoes-rifah2/movie-website-master/templates/partials/header.ejs
@@ -4,7 +4,7 @@
             <%= pageTitle %>
         </a>
     </h1>
-    <section id="nav" style="font-family: cursive; margin-bottom: 20px">
+    <section id="nav" style="font-family: cursive;">
         <div class="shundor">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container-fluid">
@@ -53,15 +53,19 @@
                                 <a class="nav-link" href="/register">Register</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="logout">Logout</a>
+                                <a class="nav-link" href="/logout">Logout</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/editProfile">Logout</a>
+                            </li>
+
 
                         </ul>
                         <section id="search">
-                        <form class="d-flex" action="/searchresults" method="post">
-                            <input class="form-control me-sm-2" type="text" placeholder="Search" name ="search">
-                            <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-                        </form>
+                            <form class="d-flex" action="/searchresults" method="post">
+                                <input class="form-control me-sm-2" type="text" placeholder="Search" name ="search">
+                                <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+                            </form>
                         </section>
                     </div>
                 </div>
