--- a/Rotten-Mangoes-rifah2/movie-website-master/templates/views/login.ejs
+++ b/Rotten-Mangoes-rifah2/movie-website-master/templates/views/login.ejs
@@ -1,26 +1,39 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="/css/login.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Sen:wght@400;700;800&display=swap"
+          rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <p style="color:yellow; text-align: center;">
+    <p style="color:yellow; text-align: center; margin-top: 235px; font-size: 20px">
         <%= message %>
     </p>
     <!-- !this is important. posts to /login route -->
     <br>
-    <div class = "container" style="align-self:center; margin-right:300px; position: center;">
+    <div class = "container" style="align-self:center; margin-right:300px; position: center; margin-bottom: 100px">
+        <h1 style="color: #EFFC20; margin-top: 15px">Login</h1>
         <form action="/login" method="post" style="text-align: center;">
-            <h2>Login</h2>
-            <div class="input-field">
-                <input type="text" name="username" id="username" placeholder="Enter Username">
+            <div class="box">
+                <label for="username" class="fl fontLabel"> Username: </label>
+                <div class="input-field" style="border-radius: 10px">
+                    <input type="text" name="username" id="username" placeholder="Enter Username" class="textBox" autofocus="on" required>
+                </div>
             </div>
-            <div class="input-field">
-                <input type="password" name="password" id="password" placeholder="Enter Password">
+
+            <div class="box">
+                <label for="password" class="fl fontLabel"> Password: </label>
+                <div class="input-field" style="border-radius: 10px">
+                    <input type="password" name="password" id="password" placeholder="Enter Password" class="textBox" autofocus="on" required>
+                </div>
             </div>
-            <input type="submit" value="LogIn">
+            <button class="btn btn-secondary my-2 my-sm-0 submit" type="submit" style="margin-right: 20px; margin-top: 5px; border-radius: 5px"> Login </button>
         </form>
     </div>
 
