--- a/Rotten-Mangoes-rifah2/movie-website-master/templates/views/movielist.ejs
+++ b/Rotten-Mangoes-rifah2/movie-website-master/templates/views/movielist.ejs
@@ -17,19 +17,46 @@
 <div class="main-content" name="movies">
     <%- include('../partials/header.ejs') %>
     <h3 style="color: yellow; font-family: cursive;">Movies:</h3>
-    <% if(!moviesList || moviesList.length === 0) { %>
-        <p style="color: white">No result found</p>
-    <% }
-    else { %>
-        <% for (var i = 0; i < moviesList.length; i++){ %>
-            <ul style="color: white; font-size: xx-large; font-style: italic; font-family: cursive">
-                <%= moviesList[i].Id + ". " + moviesList[i].Title %>
-            </ul>
-        <% } %>
 
-    <% } %>
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="/">Home</a></li>
+            <li class="breadcrumb-item active">Movies</li>
+        </ol>
+    </nav>
+
+
+    <h6>(Showing )</h6>
+    <div class="d-flex flex-wrap justify-content-evenly">
+        <% for(let i = 0;i < moviesList.length;i++){ %>
+            <div class="card mb-1 m-1" style="width: 12rem;">
+                <img class="card-img-top p-3" src=<%= moviesList[i].Pictures %>
+                alt="Card">
+                <div class="card-body" style="display: flex;flex-direction: column;justify-content:space-between;">
+                    <p style="color: #266dd3;font-weight: 650; font-size: 18px;" class="card-title"><%= moviesList[i].Title %></p>
+                    <div>
+                <span class="ml-0">
+
+                </span>
+                        <p class="card-text">Released on: <%= moviesList[i].Release_Date %></p>
+                        <div class="d-grid gap-2">
+                            <a href=<%="/movielist/"+moviesList[i].Id+"/details"%> class="btn-warning">
+                                <i class="bi bi-book-half"></i>
+                                VIEW Movie
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        <% } %>
+        <br/>
+    </div>
 </div>
-    <%- include('../partials/footer.ejs') %>
+
+
+</div>
+
+<%- include('../partials/footer.ejs') %>
 </body>
 
 </html>
