--- a/Rifah/Rifah4/Rotten-Mangoes-rifah4/Rotten-Mangoes-rifah2/movie-website-master/templates/views/review.ejs
+++ b/Rifah/Rifah4/Rotten-Mangoes-rifah4/Rotten-Mangoes-rifah2/movie-website-master/templates/views/review.ejs
@@ -49,7 +49,11 @@
                             <%= allUserReview[i].Review_id + ". " + allUserReview[i].Content%>
                         </div>
                     </div>
-                    <button class="btn btn-secondary my-2 my-sm-0" style="color: black; background-color: #4e4ee5; margin-bottom: 10px; margin-left: 50px"> Nice! </button>
+                    <a href=<%="/review/"+allUserReview[i].Review_id+"/details"%> class="btn-warning">
+                        <i class="bi bi-book-half"></i>
+                        VIEW Review
+                    </a>
+                    <button metclass="btn btn-secondary my-2 my-sm-0" style="color: black; background-color: #4e4ee5; margin-bottom: 10px; margin-left: 50px"> Nice! </button>
                     <button class="btn btn-secondary my-2 my-sm-0" style=" color: black; background-color: #4e4ee5; margin-bottom: 10px; margin-left: 155px"> Nope </button>
                 </ul>
             <% } %>
