--- a/Rifah/Rifah4/Rotten-Mangoes-rifah4/Rotten-Mangoes-rifah2/movie-website-master/public/css/register.css
+++ b/Rifah/Rifah4/Rotten-Mangoes-rifah4/Rotten-Mangoes-rifah2/movie-website-master/public/css/register.css
@@ -4,18 +4,22 @@
 }
 body{
     /* background-image: url("H:\0. Level 2 Term 2\Project\Front End\HTML\AvengersEndgamepostcredits.jpg") no-repeat center fixed;*/
-    background-image: url("https://www.myfreewalls.com/public/uploads/preview/captain-america-shield-4k-wallpaper-116241401857fqn8nphyk.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
+    background-color: black;
+}
 
+.fa{
+    position: center;
+    margin-top: 4px;
 }
 
 .container{
-    background: #000000;
-    width: 350px;
-    height: 450px;
+    background: #222222;
     padding-bottom: 20px;
+    width: 350px;
+    height: 500px;
     position: absolute;
     top:50%;
     left: 50%;
@@ -23,6 +27,7 @@ body{
     margin: auto;
     padding: 70px 50px 20px 50px;
     text-align: center;
+    border-radius: 20px;
 }
 
 .head{
@@ -45,6 +50,7 @@ body{
 
 .fr{
     float: right;
+    margin-left: 20px;
 }
 
 .clr{
@@ -55,6 +61,7 @@ body{
     color: white;
     background: #000000;
     line-height: 38px;
+    border-radius: 10px;
 }
 
 .terms{
@@ -62,25 +69,43 @@ body{
     text-align: center;
     background: #000000;
     color: white;
+    border-radius: 10px;
 }
 
 .box{
     width: 360px;
     height: 35px;
     margin-top: 10px;
+    margin-bottom: 10px;
     font-family: verdana;
     font-size: 12px;
-    color: #EFFC20 ;
 }
+/*.fl_iconbox{
+    background-color: #EFFC20;
+}*/
 
 .textBox{
     height: 35px;
     width: 190px;
     border: none;
     padding-left: 20px;
-    position: relative;
+    /*position: relative;*/
 
 }
+
+.iconBox{
+    height: 20px;
+    width: 20px;
+    line-height: 38px;
+    text-align: center;
+    background: #EFFC20;
+    color: black;
+    margin-left: 4px;
+    float: left;
+    /*margin-right: 210px;*/
+    margin-top: 7px;
+}
+
 .submit{
     float: right;
     border: none;
