--- a/Rifah/Rifah4/Rotten-Mangoes-rifah4/Rotten-Mangoes-rifah2/movie-website-master/templates/views/singlemovie.ejs
+++ b/Rifah/Rifah4/Rotten-Mangoes-rifah4/Rotten-Mangoes-rifah2/movie-website-master/templates/views/singlemovie.ejs
@@ -128,6 +128,14 @@
                         <th>Release Date</th>
                         <td><%=   moviedetails.Release_Date %></td>
                     </tr>
+                    <tr>
+                        <th>Trailer</th>
+                        <iframe width="420" height="315"
+                                src="https://www.youtube.com/embed/tgbNymZ7vqY">
+                        </iframe>
+
+                    </tr>
+
 
 
 
