--- a/Rotten-Mangoes-rifah2/movie-website-master/templates/views/index.ejs
+++ b/Rotten-Mangoes-rifah2/movie-website-master/templates/views/index.ejs
@@ -27,7 +27,7 @@
                 <div class="d-flex flex-wrap justify-content-evenly">
                     <% for(let i = 0;i < moviesList.length;i++){ %>
                         <div class="card mb-1 m-1" style="width: 12rem;">
-                            <img class="card-img-top p-3" src=<%= moviesList[i].Pictures %>
+                            <img class="card-img-top p-3" src=<%= moviesList[i].Picture %>
                             alt="Card">
                             <div class="card-body" style="display: flex;flex-direction: column;justify-content:space-between;">
                                 <p style="color: #266dd3;font-weight: 650; font-size: 18px;" class="card-title"><%= moviesList[i].Title %></p>
@@ -101,7 +101,7 @@
                 <div class="d-flex flex-wrap justify-content-evenly">
                     <% for(let i = 0;i < moviesList.length;i++){ %>
                         <div class="card mb-1 m-1" style="width: 12rem;">
-                            <img class="card-img-top p-3" src=<%= moviesList[i].Pictures %>
+                            <img class="card-img-top p-3" src=<%= moviesList[i].Picture %>
                             alt="Card">
                             <div class="card-body" style="display: flex;flex-direction: column;justify-content:space-between;">
                                 <p style="color: #266dd3;font-weight: 650; font-size: 18px;" class="card-title"><%= moviesList[i].Title %></p>
