--- a/Rotten-Mangoes-rifah2/movie-website-master/templates/views/login.ejs
+++ b/Rotten-Mangoes-rifah2/movie-website-master/templates/views/login.ejs
@@ -1,41 +1,77 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="/css/login.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Sen:wght@400;700;800&display=swap"
-          rel="stylesheet">
+    <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <p style="color:yellow; text-align: center; margin-top: 235px; font-size: 20px">
-        <%= message %>
-    </p>
-    <!-- !this is important. posts to /login route -->
-    <br>
-    <div class = "container" style="align-self:center; margin-right:300px; position: center; margin-bottom: 100px">
-        <h1 style="color: #EFFC20; margin-top: 15px">Login</h1>
-        <form action="/login" method="post" style="text-align: center;">
-            <div class="box">
-                <label for="username" class="fl fontLabel"> Username: </label>
-                <div class="input-field" style="border-radius: 10px">
-                    <input type="text" name="username" id="username" placeholder="Enter Username" class="textBox" autofocus="on" required>
-                </div>
-            </div>
 
-            <div class="box">
-                <label for="password" class="fl fontLabel"> Password: </label>
-                <div class="input-field" style="border-radius: 10px">
-                    <input type="password" name="password" id="password" placeholder="Enter Password" class="textBox" autofocus="on" required>
+
+
+
+
+
+<div class=" row p-5 ms-5 me-5 g-0">
+    <div class="col-5 rounded-2">
+
+    </div>
+    <div class="shadow mt-2 mb-2 col-7 p-3 rounded-2">
+        <ul class="mt-3 nav nav-tabs justify-content-center">
+            <li class="nav-item active">
+                <a href="#" class="nav-link active">Login</a>
+            </li>
+            <li class="nav-item">
+                <a href="/register" class="nav-link">Sign Up</a>
+            </li>
+
+        </ul>
+        <form class="p-4" action="/login" method="POST">
+
+            <div class="form-floating mb-3">
+                <h2>Login</h2>
+                <div class="input-field">
+                    <input type="text" name="username" id="username" placeholder="Enter Username">
+                </div>
+                <div class="input-field">
+                    <input type="password" name="password" id="password" placeholder="Enter Password">
+                </div>
+                <input type="submit" value="LogIn">
+            </div>
+            <!--            end-->
+
+            <!-- error list -->
+
+
+            <div class="row">
+                <div class="col">
+                    <div class="custom-control custom-checkbox mr-sm-2">
+                        <input id="rememberme" name="_spring_security_remember_me" class="custom-control-input"
+                               checked="checked" type="checkbox" value="true"><input type="hidden"
+                                                                                     name="__spring_security_remember_me"
+                                                                                     value="on">
+                        <label class="custom-control-label" for="rememberme">
+                            Remember Me
+                        </label>
+                    </div>
+                </div>
+                <div class="col text-right">
+                    <a class="forget-password-link" href="#">Forgot
+                        Password?</a>
                 </div>
             </div>
-            <button class="btn btn-secondary my-2 my-sm-0 submit" type="submit" style="margin-right: 20px; margin-top: 5px; border-radius: 5px"> Login </button>
+            <!-- submit -->
+            <div class="d-grid gap-2 mt-3 ">
+                <button type="submit" class="btn btn-lg btn-primary" style="background-color: #33c24d;border: 0">Sign In
+                </button>
+            </div>
         </form>
+        <div class="d-flex justify-content-around">
+            <p>Don’t have an account?<a class="js--registration-form-btn" href="/register"><b>Sign Up Now!</b></a>
+            </p>
+        </div>
     </div>
+</div>
 
 
 </body>
