--- a/Rotten-Mangoes-rifah2/movie-website-master/templates/views/userprofile.ejs
+++ b/Rotten-Mangoes-rifah2/movie-website-master/templates/views/userprofile.ejs
@@ -20,7 +20,7 @@
             </h3>
             <br>
             <br>
-            <p style="color: rgb(37, 37, 87);font-size: larger; font-weight: 800;">Email :<span style="color: black;"> <%= userInfo.Email %></span>
+            <p style="color: rgb(37, 37, 87);font-size: larger; font-weight: 800;">Email :<span style="color: black;"> <%= userInfo.EMAIL %></span>
             </p>
             <br>
             <p style="color: rgb(28, 28, 124);font-size: larger; font-weight: 700;"> Bio: <span style="color: black;"><%= userInfo.email %></span>
@@ -30,7 +30,7 @@
             </p>
             <br>
 
-            <a href=<%="/user/" + userInfo.Username + "/watchlist/" %> >
+            <a href=<%="/user/" + userInfo.USERNAME + "/watchlist/" %> >
                 <button style="background: rgb(91, 91, 141);">
                     Your Watchlist
                 </button>
