--- a/Rotten-Mangoes-rifah2/movie-website-master/templates/views/register.ejs
+++ b/Rotten-Mangoes-rifah2/movie-website-master/templates/views/register.ejs
@@ -7,7 +7,7 @@
 
 
 <body>
-<p style="color:yellow; text-align: center; font-size: 20px; margin-top: 25px">
+<p style="color:#0dbf92; text-align: center; font-size: 20px; margin-top: 25px">
     <%= message %>
 </p>
 <!--<div style="align-self:center; margin-right:300px;">
@@ -26,7 +26,7 @@
     </form>
 </div>-->
 <div class="container">
-    <h1 style="color: #EFFC20">Register</h1>
+    <h1 style="color: #0dbf92">Register</h1>
     <form action="/register" method="post" autocomplete="on">
         <!--First name-->
         <div class="box">
