--- a/Rotten-Mangoes-rifah2/movie-website-master/templates/views/Merchandise.ejs
+++ b/Rotten-Mangoes-rifah2/movie-website-master/templates/views/Merchandise.ejs
@@ -1,4 +1,4 @@
-html>
+<html>
 <head>
     <title>Merchandise</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css" />
@@ -22,10 +22,13 @@ html>
         </ol>
     </nav>
 
-    <form action="/Merchandise" method="post">
+    <a href="/cart">
         <button id="btnSaveChanges" class="btn btn-success" style="align-self: center; position: relative; top: 15px; width: 190px; height: 38px;">View Cart</button>
 
-    </form>
+        </a>
+
+
+
     <h2 style="color: #EFFC20">Tshirts:</h2>
     <div class="d-flex flex-wrap justify-content-evenly">
         <% for(let i = 0;i < tshirts.length;i++){ %>
